--- a/style.css
+++ b/style.css
@@ -6,12 +6,49 @@ html {
 body {
 
     margin: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .wrapper {
 
     margin: 0 0 20px 0;
     width: 600px;
     height: 400px;
+    border: 2px solid #CCC;
+    display: grid;
+    gap:  10px;
+    grid-template-columns: repeat(4,100px)    ;
+    grid-template-rows: repeat(3,120px);
+    align-content: space-around;
+    justify-content: space-between;
     
     
+}
+
+.box{
+
+   background-color: khaki; 
+   border-radius: 7px;
+   padding: 20px;
+   font-size: 150%;
+
+
+}
+
+.item1 {
+
+    grid-column: 1 / 5;
+
+}
+
+.item2 {
+
+    grid-column: 1 / 3;
+    grid-row: 2 / 4 ;
+
+}
+
+.item3 {
+
+    grid-column: 3 / 5;
+
 }
